# naval_sketch

./: .gitignore  Cargo.toml  README.md  ShipSaves  generate_web.sh  index.html  todo.md
src/: asset_extractor.rs  cam_movement.rs  editor.rs  editor_actions.rs  editor_ui.rs  editor_utils.rs  main.rs  parsing.rs  parts.rs  parts_loader.rs
src/transform_gizmo/: config.rs  gizmo.rs  mod.rs  prelude.rs  shape.rs  subgizmo.rs
src/transform_gizmo/subgizmo/: arcball.rs  common.rs  rotation.rs  scale.rs  translation.rs
src/transform_gizmo_bevy/: mod.rs  mouse_interact.rs  picking.rs  prelude.rs  render.rs
