[package]
name = "naval_fart"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking", "wayland"]}
bevy_egui = "0.33.0"
chrono = "0.4.39"
dirs = "6.0.0"
enum-collections = "1.6.0"
quick-xml = "0.37.2"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
smol_str = "*"
yaml-rust2 = "0.9.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

