[package]
name = "naval_sketch"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking", "wayland"]}
bevy_egui = "0.33.0"
chrono = "0.4.39"
csv = "1.3.1"
dirs = "6.0.0"
enum-collections = "1.6.0"
quick-xml = "0.37.2"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = "1.0.217"
smol_str = "*"
# transform-gizmo-bevy = "0.5.1"
yaml-rust2 = "0.9.0"

eframe = "0.31"
emath = "0.31"
epaint = "0.31"
ecolor = "0.31"
glam = { version = "0.29.0", features = ["mint"] }
mint = "0.5"
enum_dispatch = "0.3.12"
ahash = "0.8.7"
enumset = "1.1.3"
bytemuck = "1.5"
uuid = "1.1"

[patch.crates-io]
# transform-gizmo-bevy = { path = "../transform-gizmo/crates/transform-gizmo-bevy" }
# transform-gizmo-bevy = { git = "https://github.com/jj136975/transform-gizmo.git" }


# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

