[package]
name = "naval_sketch"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking", "wayland"]}
bevy_egui = "0.33.0"
chrono = "0.4.39"
csv = "1.3.1"
dirs = "6.0.0"
enum-collections = "1.6.0"
quick-xml = "0.37.2"
rand = "0.9.0"
regex = "1.11.1"

serde = "1.0.217"
smol_str = "*"
# transform-gizmo-bevy = "0.5.1"
yaml-rust2 = "0.9.0"
serde_json = "1.0"
 
eframe = "0.31"
emath = "0.31"
epaint = "0.31"
ecolor = "0.31"
glam = { version = "0.29.0", features = ["mint"] }
mint = "0.5"
enum_dispatch = "0.3.12"
ahash = "0.8.7"
enumset = "1.1.3"
bytemuck = "1.5"
uuid = "1.1"
bevy_web_asset = "0.10.1"
futures-lite = "2.6.0"
log = "0.4.27"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
# tokio = { version = "1.44.1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.2", features = ["wasm_js"] }
web-sys = { version = "0.3.77", features = ["Window", "Location"] }
wasm-bindgen = "0.2.100"
gloo-net = "0.6.0"
console_log = { version = "1.0.0", features = ["color"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.50"
pollster = "0.4.0"

# [target.wasm32-unknown-unknown]
# runner = "wasm-server-runner"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
